--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -11,16 +11,46 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
 
+# Development image - runs the Next.js dev server
+FROM node:20-alpine AS dev
+WORKDIR /app
+ENV NODE_ENV=development
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Copy package files first for better caching
+COPY package.json package-lock.json ./
+
+# Install all dependencies (including devDependencies)
+RUN npm install
+
+# Copy the rest of the application
+COPY . .
+
+# Expose the port the app runs on
+EXPOSE 3000
+
+# Start the development server
+CMD ["npm", "run", "dev", "--", "-p", "3000", "-H", "0.0.0.0"]
+
 # Production image, copy all the files and run next
 FROM node:20-alpine AS runner
 WORKDIR /app
-ENV NODE_ENV production
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
-# If you want to run in development, comment out the next two lines and use npm run dev
+# Copy necessary files for production
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/node_modules ./node_modules
 
+# Set the user to a non-root user for security
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+USER nextjs
+
+# Expose the port the app runs on
 EXPOSE 3000
+
+# Start the application
 CMD ["npm", "start"] 
