--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -62,7 +62,6 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.323.0",
-    "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.1.0",
@@ -107,6 +106,7 @@
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next": "14.2.4",
     "postcss": "^8",
     "prisma": "^6.10.0",
     "process": "^0.11.10",
